# autoCV

./: .gitattributes  .gitignore  AGENTS.md  Agent.md  LICENSE  README.md  Taskfile.yml  design-qa.md  go.mod  go.sum  main.go
.github/workflows/: verify.yml
docs/architecture/: ai-workflow.md  mvp-architecture.md
docs/design/: pdf-kami-quality-review.md
docs/plans/: autocv-product-definition-plan.md  mvp-implementation-plan.md
docs/product/: autocv-mvp-product-spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: style.css
frontend/src/: App.test.tsx  App.tsx  JDWorkspace.tsx  MatchReviewWorkspace.tsx  PDFPreview.tsx  ProfileLibrary.tsx  ResumeStudio.tsx  SettingsWorkspace.tsx  mockData.ts
internal/app/: health.go  health_test.go  jd.go  jd_test.go  match.go  match_test.go  mvp_flow_test.go  pdf.go  pdf_test.go  profile.go  profile_evidence.go  profile_evidence_test.go  profile_test.go  provider_control.go  provider_control_test.go  resume.go  resume_test.go  run_scope.go  settings.go  settings_test.go  workflow_events.go  workflow_status.go  workflow_status_test.go
migrations/: 000001_initial.sql  000002_profile_content.sql  000003_jd_analysis_state.sql  000004_match_analysis.sql  000005_resume_versions.sql  000006_artifact_resume.sql  000007_artifact_previews.sql  000008_provider_calls.sql  000009_active_profile.sql  000010_profile_search.sql  000011_run_scope.sql  000012_clarification_questions.sql  000013_run_confirmations.sql  embed.go
renderers/autocv-pdf-renderer/: pyproject.toml  renderer.py
(+164 files in other folders)
